--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
