--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.2",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "0.17.1"
