--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.2",
+    "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "firebase": "^9.6.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -21,8 +25,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.2",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-web": "0.17.1",
-    "expo-updates": "~0.11.6"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
