--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
       [
         "expo-image-picker",
         {
-          "photosPermission": "The app accesses your photos to let you share them with your friends."
+          "photosPermission": "The app accesses your photos to let you share them with your friends"
         }
       ]
     ]
