--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.2",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
