--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    
+    "@react-native-firebase/app": "^14.5.0",
+    "@react-native-firebase/storage": "^14.5.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "expo": "~44.0.0",
