--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-native-firebase/storage": "^14.5.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "easyqrcode-react-native": "^4.0.5",
     "expo": "~44.0.0",
     "expo-camera": "~12.1.2",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
+    "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "firebase": "^9.6.6",
@@ -29,7 +31,7 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
-    "expo-sqlite": "~10.1.0"
+    "react-native-webview": "^11.17.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
