--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
     "@react-native-firebase/app": "^14.5.0",
     "@react-native-firebase/storage": "^14.5.0",
     "@react-navigation/native": "^6.0.8",
